Fix Text Align

--- a/src/styles/layout/_grid.scss
+++ b/src/styles/layout/_grid.scss
@@ -19,5 +19,6 @@
 
   @include respond(small) {
     padding: 0 1rem;
+    grid-row-gap: 2rem;
   }
 }
